--- a/src/Montr.Data.Linq2Db/Montr.Data.Linq2Db.csproj
+++ b/src/Montr.Data.Linq2Db/Montr.Data.Linq2Db.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Montr.Modularity\Montr.Modularity.csproj" />
+    <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
   </ItemGroup>
 
 </Project>
