--- a/src/Montr.Data.Npgsql/Montr.Data.Npgsql.csproj
+++ b/src/Montr.Data.Npgsql/Montr.Data.Npgsql.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Montr.Modularity\Montr.Modularity.csproj" />
+    <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
   </ItemGroup>
 
 </Project>
