--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,21 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
+      # checkout
       - uses: actions/checkout@master
+
+      # build dotnet
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.0.100'
       - run: dotnet build ./src/Montr.sln
+
+      # build node
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - run: npm install
+      - run: npm run build-prod
+      # - run: npm test
