--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,11 @@ jobs:
           dotnet-version: '3.0.100'
       - run: dotnet build ./src/Montr.sln
 
-      # build node
-      - uses: actions/setup-node@v1
+      - name: build node
+        uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - run: npm install
         working-directory: ./src/ui
-      - run: npm run build-prod
-      # - run: npm test
+        run: npm install
+        run: npm run build-prod
+        # run: npm test
