--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,15 +1,15 @@
 ﻿{
 	"App": {
-		"AppUrl": "http://app.montr.io:5010"
+		"AppUrl": "https://app.montr.io:5001"
 	},
 	"IdxServer": {
-		"PublicOrigin": "http://app.montr.io:5010",
+		"PublicOrigin": "https://app.montr.io:5001",
 		"ClientUrls": [
-			"http://app.montr.io:5010"
+			"https://app.montr.io:5001"
 		]
 	},
 	"OpenId": {
-		"Authority": "http://app.montr.io:5010",
+		"Authority": "https://app.montr.io:5001",
 		"ClientId": "tendr",
 		"ClientSecret": "secret"
 	},
