--- a/src/Montr.Idx.Impl/Montr.Idx.Impl.csproj
+++ b/src/Montr.Idx.Impl/Montr.Idx.Impl.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="linq2db.PostgreSQL" Version="2.9.3" />
     <PackageReference Include="MediatR" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
   </ItemGroup>
