--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,19 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # checkout
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
 
-      # build dotnet
-      - uses: actions/setup-dotnet@v1
+      - name: setup .net core
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '3.0.100'
+
       - run: dotnet build ./src/Montr.sln
 
-      # build node
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+
       - run: |
           npm ci
           npm run build-prod
