--- a/src/Montr.Idx.Tests/Montr.Idx.Tests.csproj
+++ b/src/Montr.Idx.Tests/Montr.Idx.Tests.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="linq2db.Identity" Version="2.0.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+		<PackageReference Include="Moq" Version="4.13.1" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
 		<PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
 		<PackageReference Include="Npgsql" Version="4.1.2" />
@@ -15,6 +17,7 @@
 	  <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.Idx.Impl\Montr.Idx.Impl.csproj" />
     <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
+    <ProjectReference Include="..\Montr.Messages.Impl\Montr.Messages.Impl.csproj" />
   </ItemGroup>
 
   <ItemGroup>
