core: fixing data-form.tsx

--- a/src/ui/.babelrc
+++ b/src/ui/.babelrc
@@ -1,9 +1,18 @@
 {
 	"presets": [
-		"@babel/preset-react"
+		"@babel/preset-react",
+		/* [
+			"@babel/preset-env",
+			{
+				"targets": {
+					"node": "current"
+				}
+			}
+		] */
 	],
 	"plugins": [
-		"@babel/plugin-syntax-dynamic-import" /* ,
+		"@babel/plugin-syntax-dynamic-import"
+		/* ,
 		[
 			"import",
 			{
