--- a/src/ui/.babelrc
+++ b/src/ui/.babelrc
@@ -1,25 +1,27 @@
 {
 	"presets": [
+		"@babel/preset-env",
 		"@babel/preset-react",
-		/* [
-			"@babel/preset-env",
-			{
-				"targets": {
-					"node": "current"
-				}
-			}
-		] */
+		"@babel/preset-typescript"
 	],
 	"plugins": [
-		"@babel/plugin-syntax-dynamic-import"
-		/* ,
+		"@babel/plugin-proposal-class-properties",
+		"@babel/plugin-proposal-optional-chaining",
+		"@babel/plugin-proposal-nullish-coalescing-operator",
+		"@babel/plugin-syntax-dynamic-import",
+		[
+			"@babel/plugin-transform-runtime",
+			{
+				"regenerator": true
+			}
+		],
 		[
 			"import",
 			{
 				"libraryName": "antd",
 				"libraryDirectory": "es",
-				"style": "less"
+				"style": true
 			}
-		] */
+		]
 	]
 }
