--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -27,15 +27,25 @@
 		"universal-cookie": "^4.0.2"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.7.7",
+		"@babel/plugin-proposal-class-properties": "^7.7.4",
+		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
+		"@babel/plugin-proposal-optional-chaining": "^7.7.5",
+		"@babel/plugin-transform-runtime": "^7.7.6",
+		"@babel/preset-env": "^7.7.7",
+		"@babel/preset-react": "^7.7.4",
+		"@babel/preset-typescript": "^7.7.7",
 		"@types/lodash": "^4.14.149",
 		"@types/react": "^16.9.16",
 		"@types/react-dom": "^16.9.4",
 		"@types/react-router": "^5.1.3",
 		"@types/react-router-dom": "^5.1.3",
 		"awesome-typescript-loader": "^5.2.1",
+		"babel-loader": "^8.0.6",
 		"babel-plugin-import": "^1.13.0",
 		"copy-webpack-plugin": "^5.1.1",
 		"css-loader": "^3.4.0",
+		"fork-ts-checker-webpack-plugin": "^4.0.0-beta.4",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
