--- a/src/Montr.Core/Montr.Core.csproj
+++ b/src/Montr.Core/Montr.Core.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.0" />
   </ItemGroup>
 
