--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -13,7 +13,7 @@
 	"license": "GPL-3.0",
 	"private": true,
 	"dependencies": {
-		"antd": "^4.0.0-beta.1",
+		"antd": "^4.0.0-rc.0",
 		"axios": "^0.19.0",
 		"i18next": "^19.0.2",
 		"i18next-browser-languagedetector": "^4.0.1",
@@ -44,8 +44,8 @@
 		"babel-loader": "^8.0.6",
 		"babel-plugin-import": "^1.13.0",
 		"copy-webpack-plugin": "^5.1.1",
-		"css-loader": "^3.4.0",
-		"fork-ts-checker-webpack-plugin": "^4.0.0-beta.4",
+		"css-loader": "^3.4.1",
+		"fork-ts-checker-webpack-plugin": "^4.0.0-beta.5",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
