extracted Montr.Metadata projects (server side, not completed)

--- a/src/Montr.MasterData.Impl/Montr.MasterData.Impl.csproj
+++ b/src/Montr.MasterData.Impl/Montr.MasterData.Impl.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
+    <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
   </ItemGroup>
 
 </Project>
