--- a/src/Host/Host.csproj
+++ b/src/Host/Host.csproj
@@ -45,6 +45,8 @@
     <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
     <ProjectReference Include="..\Montr.Messages.Impl\Montr.Messages.Impl.csproj" />
     <ProjectReference Include="..\Montr.Messages\Montr.Messages.csproj" />
+    <ProjectReference Include="..\Montr.Metadata.Impl\Montr.Metadata.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
     <ProjectReference Include="..\Montr.Tendr.Impl\Montr.Tendr.Impl.csproj" />
     <ProjectReference Include="..\Montr.Tendr\Montr.Tendr.csproj" />
     <ProjectReference Include="..\Montr.Worker.Hangfire\Montr.Worker.Hangfire.csproj" />
