--- a/src/Montr.MasterData.Tests/Montr.MasterData.Tests.csproj
+++ b/src/Montr.MasterData.Tests/Montr.MasterData.Tests.csproj
@@ -16,6 +16,8 @@
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.MasterData.Impl\Montr.MasterData.Impl.csproj" />
     <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
+    <ProjectReference Include="..\Montr.Metadata.Impl\Montr.Metadata.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
   </ItemGroup>
 
   <ItemGroup>
