--- a/src/Montr.Tendr.Tests/Montr.Tendr.Tests.csproj
+++ b/src/Montr.Tendr.Tests/Montr.Tendr.Tests.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Montr.MasterData.Impl\Montr.MasterData.Impl.csproj" />
     <ProjectReference Include="..\Montr.MasterData.Tests\Montr.MasterData.Tests.csproj" />
+    <ProjectReference Include="..\Montr.Metadata.Impl\Montr.Metadata.Impl.csproj" />
     <ProjectReference Include="..\Montr.Tendr.Impl\Montr.Tendr.Impl.csproj" />
   </ItemGroup>
 
