--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -45,15 +45,15 @@
 		"babel-plugin-import": "^1.13.0",
 		"copy-webpack-plugin": "^5.1.1",
 		"css-loader": "^3.4.2",
-		"fork-ts-checker-webpack-plugin": "^4.0.0-beta.5",
+		"fork-ts-checker-webpack-plugin": "^4.0.1",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
 		"source-map-loader": "^0.2.4",
-		"style-loader": "^1.1.2",
+		"style-loader": "^1.1.3",
 		"ts-import-plugin": "^1.6.2",
 		"ts-loader": "^6.2.1",
-		"typescript": "^3.7.4",
+		"typescript": "^3.7.5",
 		"webpack": "^4.41.5",
 		"webpack-bundle-analyzer": "^3.6.0",
 		"webpack-cli": "^3.3.10",
