--- a/src/Montr.Kompany.Impl/Montr.Kompany.Impl.csproj
+++ b/src/Montr.Kompany.Impl/Montr.Kompany.Impl.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Montr.Dokumento\Montr.Dokumento.csproj" />
+    <ProjectReference Include="..\Montr.Docs\Montr.Docs.csproj" />
     <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
