docs: added folder for ui

--- a/src/Montr.Docs.Impl/Montr.Docs.Impl.csproj
+++ b/src/Montr.Docs.Impl/Montr.Docs.Impl.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Montr.Docs\Montr.Docs.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CommandHandlers\" />
+  </ItemGroup>
+
 </Project>
