moved db migration to core, configured to run before app start

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -13,6 +13,9 @@
 		"ClientId": "tendr",
 		"ClientSecret": "secret"
 	},
+	"Montr.Core.MigrationOptions": {
+		"MigrationPath": "../../sql/"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Debug",
