--- a/src/Montr.Core.Impl/Montr.Core.Impl.csproj
+++ b/src/Montr.Core.Impl/Montr.Core.Impl.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\bootstrap.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\bootstrap.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="8.0.0" />
   </ItemGroup>
 
