--- a/src/Montr.Tools.DbMigrator/Montr.Tools.DbMigrator.csproj
+++ b/src/Montr.Tools.DbMigrator/Montr.Tools.DbMigrator.csproj
@@ -5,19 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\bootstrap.sql" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\bootstrap.sql" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Npgsql" Version="4.1.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
