core: added support to run migration with separate connection string

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -14,6 +14,7 @@
 		"ClientSecret": "secret"
 	},
 	"Montr.Core.MigrationOptions": {
+		"ConnectionName": "Migration",
 		"MigrationPath": "../../sql/"
 	},
 	"Logging": {
