core: added ImportDefaultLocaleStringListStartupTask, running database migration as first startup task

--- a/src/Montr.Core.Impl/Montr.Core.Impl.csproj
+++ b/src/Montr.Core.Impl/Montr.Core.Impl.csproj
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <None Remove="Resources\bootstrap.sql" />
+    <None Remove="Resources\locale-strings.json" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\bootstrap.sql" />
+    <EmbeddedResource Include="Resources\locale-strings.json" />
   </ItemGroup>
 
   <ItemGroup>
