moved database migrations to database/migrations directory

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -15,7 +15,7 @@
 	},
 	"Montr.Core.MigrationOptions": {
 		"ConnectionName": "Migration",
-		"MigrationPath": "../../sql/"
+		"MigrationPath": "../../database/migrations"
 	},
 	"Logging": {
 		"LogLevel": {
