removed old scripts from db migrations

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -14,7 +14,7 @@
 		"ClientSecret": "secret"
 	},
 	"Montr.Core.MigrationOptions": {
-		"ConnectionName": "Migration",
+		// "ConnectionName": "Migration",
 		"MigrationPath": "../../database/migrations"
 	},
 	"Logging": {
