--- a/src/Host/Host.csproj
+++ b/src/Host/Host.csproj
@@ -35,6 +35,9 @@
     <ProjectReference Include="..\Montr.Docs.Impl\Montr.Docs.Impl.csproj" />
     <ProjectReference Include="..\Montr.Docs\Montr.Docs.csproj" />
     <ProjectReference Include="..\Montr.Idx.Impl\Montr.Idx.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Idx.Plugin.Facebook\Montr.Idx.Plugin.Facebook.csproj" />
+    <ProjectReference Include="..\Montr.Idx.Plugin.Google\Montr.Idx.Plugin.Google.csproj" />
+    <ProjectReference Include="..\Montr.Idx.Plugin.MicrosoftAccount\Montr.Idx.Plugin.MicrosoftAccount.csproj" />
     <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
     <ProjectReference Include="..\Montr.Kompany.Impl\Montr.Kompany.Impl.csproj" />
     <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
