--- a/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
+++ b/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.Messages\Montr.Messages.csproj" />
   </ItemGroup>
