--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     - ConnectionString:Name=Default
     - ConnectionString:ProviderName=PostgreSQL
     - ConnectionStrings:Default=Server=db;Port=5432;Database=host;User Id=postgres;
+    - Montr.Core.MigrationOptions:MigrationPath=./database/migrations
     depends_on:
     - db
   db:
@@ -24,8 +25,8 @@ services:
     restart: always
     environment:
       POSTGRES_DB: host
-    ports:
-    - "5435:5432"
+    # ports:
+    # - "5435:5432"
     volumes:
       - montr_db_dev:/var/lib/postgresql/data
 volumes:
