removed duplicate urls in configuration files

--- a/src/Host/Properties/launchSettings.json
+++ b/src/Host/Properties/launchSettings.json
@@ -1,32 +1,13 @@
-﻿{
+{
 	"$schema": "http://json.schemastore.org/launchsettings.json",
-	"iisSettings": {
-		"windowsAuthentication": false,
-		"anonymousAuthentication": true,
-		"iisExpress": {
-			"applicationUrl": "http://localhost:59820",
-			"sslPort": 0
-		}
-	},
 	"profiles": {
-		"IIS Express": {
-			"commandName": "IISExpress",
-			"launchBrowser": true,
-			"launchUrl": "/",
-			"environmentVariables": {
-				"ASPNETCORE_ENVIRONMENT": "Development"
-			}
-		},
-		"tendr.core": {
+		"default": {
 			"commandName": "Project",
 			"launchBrowser": true,
-			"launchUrl": "/",
-			"applicationUrl": "http://app.montr.io:5010;https://app.montr.io:5001/",
+			"launchUrl": "",
+			"applicationUrl": "http://+:5000;https://+:5001",
 			"environmentVariables": {
-				"ASPNETCORE_ENVIRONMENT": "Development",
-				"COOKIE_DOMAIN": ".montr.io",
-				"AUTHORITY_APP_URL": "https://app.montr.io:5001",
-				"APP_URL": "https://app.montr.io:5001"
+				"ASPNETCORE_ENVIRONMENT": "Development"
 			}
 		}
 	}
