--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,17 +1,15 @@
 ﻿{
 	"Montr.Core.AppOptions": {
-		"AppUrl": "https://app.montr.io:5001"
-	},
-	"IdxServer": {
-		"PublicOrigin": "https://app.montr.io:5001",
+		// "AppUrl": "https://app.montr.io:5001",
+		// "CookieDomain": ".montr.io"
 		"ClientUrls": [
-			"https://app.montr.io:5001"
+			"http://app.montr.io:5000",
+			"https://app.montr.io:5001",
+			"http://localhost:5000",
+			"https://localhost:5001",
+			"http://127.0.0.1:5000",
+			"https://127.0.0.1:5001"
 		]
-	},
-	"OpenId": {
-		"Authority": "https://app.montr.io:5001",
-		"ClientId": "tendr",
-		"ClientSecret": "secret"
 	},
 	"Montr.Core.MigrationOptions": {
 		// "ConnectionName": "Migration",
