--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,12 @@ services:
     image: montr/host
     restart: always
     ports:
-    - "5010:5010"
+    - "5000:5000"
     environment:
     - ASPNETCORE_ENVIRONMENT=Development
-    - ASPNETCORE_URLS=http://+:5010
-    - COOKIE_DOMAIN=.montr.io
-    - AUTHORITY_APP_URL=http://app.montr.io:5010
-    - APP_URL=http://app.montr.io:5010
-    - OpenId:Authority=http://app.montr.io:5010
+    - ASPNETCORE_URLS=http://+:5000;
+    #- Montr.Core.AppOptions:AppUrl=https://app.montr.io:5001
+    #- Montr.Core.AppOptions:CookieDomain=.montr.io
     - ConnectionString:Name=Default
     - ConnectionString:ProviderName=PostgreSQL
     - ConnectionStrings:Default=Server=db;Port=5432;Database=host;User Id=postgres;
