--- a/src/Montr.Data.Linq2Db/Montr.Data.Linq2Db.csproj
+++ b/src/Montr.Data.Linq2Db/Montr.Data.Linq2Db.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+    <ProjectReference Include="..\Montr.Data\Montr.Data.csproj" />
   </ItemGroup>
 
 </Project>
