--- a/src/Montr.Worker.Hangfire/Montr.Worker.Hangfire.csproj
+++ b/src/Montr.Worker.Hangfire/Montr.Worker.Hangfire.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+    <ProjectReference Include="..\Montr.Data\Montr.Data.csproj" />
     <ProjectReference Include="..\Montr.Worker\Montr.Worker.csproj" />
   </ItemGroup>
 
