--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,9 @@ jobs:
       postgres:
         image: postgres:12
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
+          #POSTGRES_USER: postgres
+          #POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: host
         ports:
         - 5432:5432
         # needed because the postgres container does not provide a healthcheck
