worker hangfire: changed dependency of hangfire - cookie auth should be initialized early

--- a/src/Montr.Worker.Hangfire/Montr.Worker.Hangfire.csproj
+++ b/src/Montr.Worker.Hangfire/Montr.Worker.Hangfire.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data\Montr.Data.csproj" />
+    <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
     <ProjectReference Include="..\Montr.Worker\Montr.Worker.csproj" />
   </ItemGroup>
 
