core: renamed module dependencies property

--- a/src/Montr.Idx.Plugin.Facebook/Montr.Idx.Plugin.Facebook.csproj
+++ b/src/Montr.Idx.Plugin.Facebook/Montr.Idx.Plugin.Facebook.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
-    <ProjectReference Include="..\Montr.Idx.Impl\Montr.Idx.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
   </ItemGroup>
 
 </Project>
