--- a/src/Montr.Idx.Plugin.MicrosoftAccount/Montr.Idx.Plugin.MicrosoftAccount.csproj
+++ b/src/Montr.Idx.Plugin.MicrosoftAccount/Montr.Idx.Plugin.MicrosoftAccount.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
-    <ProjectReference Include="..\Montr.Idx.Impl\Montr.Idx.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
   </ItemGroup>
 
 </Project>
