--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: build
 env:
-  ConnectionStrings:Default: Server=db;Port=5432;Database=host;User Id=postgres;
+  ConnectionStrings:Default: Server=db;Port=5432;Database=host;User Id=postgres;Password=secret;
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
 on: [push]
@@ -15,7 +15,7 @@ jobs:
         image: postgres:12
         env:
           POSTGRES_USER: postgres
-          # POSTGRES_PASSWORD: secret
+          POSTGRES_PASSWORD: secret
           POSTGRES_DB: host
         ports:
         - 5432:5432
