--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,12 @@ jobs:
       - run: dotnet build ./src/Montr.sln
 
       - run: dotnet test ./src/Montr.Core.Tests
+      - run: dotnet test ./src/Montr.Metadata.Tests
+      - run: dotnet test ./src/Montr.Idx.Tests
+      #- run: dotnet test ./src/Montr.MasterData.Tests
+      #- run: dotnet test ./src/Montr.MasterData.Plugin.GovRu.Tests
+      - run: dotnet test ./src/Montr.Kompany.Tests
+      #- run: dotnet test ./src/Montr.Tendr.Tests
 
       - uses: actions/setup-node@v1
         with:
