fixed some master data tests

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
 	"Montr.Core.AppOptions": {
-		// "AppUrl": "https://app.montr.io:5001",
-		// "CookieDomain": ".montr.io"
+		"AppUrl": "https://app.montr.io:5001",
+		// "CookieDomain": "app.montr.io"
 		"ClientUrls": [
 			"http://app.montr.io:5000",
 			"https://app.montr.io:5001",
