--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - run: dotnet test ./src/Montr.Metadata.Tests
       - run: dotnet test ./src/Montr.Idx.Tests
       - run: dotnet test ./src/Montr.MasterData.Tests
-      #- run: dotnet test ./src/Montr.MasterData.Plugin.GovRu.Tests
+      - run: dotnet test ./src/Montr.MasterData.Plugin.GovRu.Tests
       - run: dotnet test ./src/Montr.Kompany.Tests
       #- run: dotnet test ./src/Montr.Tendr.Tests
 
