kompany: switched registration ui to metadata

--- a/src/Montr.Kompany/Montr.Kompany.csproj
+++ b/src/Montr.Kompany/Montr.Kompany.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
+    <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
   </ItemGroup>
 
 </Project>
