--- a/src/Montr.Kompany.Tests/Montr.Kompany.Tests.csproj
+++ b/src/Montr.Kompany.Tests/Montr.Kompany.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="Npgsql" Version="4.1.3.1" />
@@ -16,6 +17,7 @@
     <ProjectReference Include="..\Montr.Kompany.Impl\Montr.Kompany.Impl.csproj" />
     <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
     <ProjectReference Include="..\Montr.Core.Impl\Montr.Core.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Metadata.Impl\Montr.Metadata.Impl.csproj" />
   </ItemGroup>
 
   <ItemGroup>
