--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -47,8 +47,10 @@
 		"css-loader": "^3.5.3",
 		"fork-ts-checker-webpack-plugin": "^4.1.3",
 		"hard-source-webpack-plugin": "^0.13.1",
+		"kind-of": ">=6.0.3",
 		"less": "^3.11.1",
 		"less-loader": "^5.0.0",
+		"minimist": ">=0.2.1",
 		"source-map-loader": "^0.2.4",
 		"style-loader": "^1.2.1",
 		"ts-import-plugin": "^1.6.6",
