--- a/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
+++ b/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
@@ -9,13 +9,17 @@
     <PackageReference Include="MailKit" Version="2.6.0" />
     <PackageReference Include="Markdig" Version="0.20.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.4" />
-    <PackageReference Include="Stubble.Core" Version="1.8.4" />
+    <PackageReference Include="Stubble.Core" Version="1.9.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.Messages\Montr.Messages.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands" />
   </ItemGroup>
 
 </Project>
