--- a/src/Montr.Messages/Montr.Messages.csproj
+++ b/src/Montr.Messages/Montr.Messages.csproj
@@ -13,4 +13,12 @@
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Services\AbstractRegisterMessageTemplateStartupTask.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands" />
+  </ItemGroup>
+
 </Project>
