--- a/src/Montr.Automate.Tests/Montr.Automate.Tests.csproj
+++ b/src/Montr.Automate.Tests/Montr.Automate.Tests.csproj
@@ -1,23 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-    </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\Montr.Automate.Impl\Montr.Automate.Impl.csproj" />
-      <ProjectReference Include="..\Montr.Automate\Montr.Automate.csproj" />
-    </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Montr.Automate.Impl\Montr.Automate.Impl.csproj" />
+		<ProjectReference Include="..\Montr.Automate\Montr.Automate.csproj" />
+	</ItemGroup>
 
-    <ItemGroup>
-      <Folder Include="QueryHandlers" />
-      <Folder Include="Services" />
-    </ItemGroup>
+	<ItemGroup>
+		<Folder Include="QueryHandlers" />
+	</ItemGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-      <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
-      <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+		<PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
+		<PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
+		<PackageReference Include="Npgsql" Version="4.1.3.1" />
+		<PackageReference Include="Moq" Version="4.14.4" />
+	</ItemGroup>
 
 </Project>
