--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
       - run: dotnet build ./src/Montr.sln
 
       - run: dotnet test ./src/Montr.Core.Tests
+      - run: dotnet test ./src/Montr.Automate.Tests
       - run: dotnet test ./src/Montr.Metadata.Tests
       - run: dotnet test ./src/Montr.Idx.Tests
       - run: dotnet test ./src/Montr.MasterData.Tests
