--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack --config webpack.dev.js --watch",
+		"start": "webpack --config webpack.dev.js --progress --watch",
 		"build-dev": "webpack --config webpack.dev.js",
 		"build-prod": "webpack --config webpack.prod.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -13,21 +13,21 @@
 	"license": "GPL-3.0",
 	"private": true,
 	"dependencies": {
-		"antd": "^4.5.4",
+		"antd": "^4.6.1",
 		"axios": "^0.19.2",
-		"i18next": "^19.6.3",
+		"i18next": "^19.7.0",
 		"i18next-browser-languagedetector": "^5.0.1",
 		"i18next-xhr-backend": "^3.2.2",
 		"oidc-client": "^1.10.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-i18next": "^11.7.0",
+		"react-i18next": "^11.7.1",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"universal-cookie": "^4.0.3"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.11.1",
+		"@babel/core": "^7.11.4",
 		"@babel/plugin-proposal-class-properties": "^7.10.4",
 		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
 		"@babel/plugin-proposal-optional-chaining": "^7.11.0",
@@ -35,30 +35,30 @@
 		"@babel/preset-env": "^7.11.0",
 		"@babel/preset-react": "^7.10.4",
 		"@babel/preset-typescript": "^7.10.4",
-		"@types/lodash": "^4.14.159",
-		"@types/react": "^16.9.46",
+		"@types/lodash": "^4.14.160",
+		"@types/react": "^16.9.47",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router": "^5.1.8",
 		"@types/react-router-dom": "^5.1.5",
 		"awesome-typescript-loader": "^5.2.1",
 		"babel-loader": "^8.1.0",
 		"babel-plugin-import": "^1.13.0",
-		"copy-webpack-plugin": "^5.1.1",
+		"copy-webpack-plugin": "^6.0.3",
 		"css-loader": "^3.6.0",
-		"fork-ts-checker-webpack-plugin": "^5.0.14",
+		"fork-ts-checker-webpack-plugin": "^5.1.0",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"kind-of": ">=6.0.3",
 		"less": "^3.12.2",
 		"less-loader": "^6.2.0",
 		"minimist": ">=0.2.1",
-		"source-map-loader": "^1.0.1",
+		"source-map-loader": "^1.0.2",
 		"style-loader": "^1.2.1",
 		"ts-import-plugin": "^1.6.6",
-		"ts-loader": "^8.0.2",
-		"typescript": "^3.9.7",
+		"ts-loader": "^8.0.3",
+		"typescript": "^4.0.2",
 		"webpack": "^4.44.1",
 		"webpack-bundle-analyzer": "^3.8.0",
 		"webpack-cli": "^3.3.12",
-		"webpack-merge": "^5.1.1"
+		"webpack-merge": "^5.1.2"
 	}
 }
