fixed ui build error (copy-webpack-plugin) - take 3

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,3 +49,5 @@ jobs:
           npm run build-prod
           # - run: npm test
         working-directory: ./src/ui
+        env:
+          CI: true
