changed entity status db structure, interim edit ui

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -13,6 +13,7 @@
 	},
 	"Montr.Core.MigrationOptions": {
 		// "ConnectionName": "Migration",
+		"Force": "false",
 		"MigrationPath": "../../database/migrations"
 	},
 	"Logging": {
