--- a/src/Host/Properties/launchSettings.json
+++ b/src/Host/Properties/launchSettings.json
@@ -5,7 +5,7 @@
 			"commandName": "Project",
 			"launchBrowser": true,
 			"launchUrl": "",
-			"applicationUrl": "http://+:5000;https://+:5001",
+			"applicationUrl": "http://localhost:5000;https://localhost:5001",
 			"environmentVariables": {
 				"ASPNETCORE_ENVIRONMENT": "Development"
 			}
