--- a/src/Host/Host.csproj
+++ b/src/Host/Host.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <UserSecretsId>1f5f8818-a536-4818-b963-2d3ef5dcef03</UserSecretsId>
   </PropertyGroup>
@@ -21,7 +21,7 @@
     <PackageReference Include="linq2db.PostgreSQL" Version="3.1.6" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.9" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
     <PackageReference Include="Npgsql" Version="4.1.5" />
     <PackageReference Include="Sentry" Version="2.1.6" />
     <PackageReference Include="Sentry.AspNetCore" Version="2.1.6" />
