--- a/src/Montr.Idx.Plugin.Facebook/Montr.Idx.Plugin.Facebook.csproj
+++ b/src/Montr.Idx.Plugin.Facebook/Montr.Idx.Plugin.Facebook.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
