--- a/src/Montr.Idx.Plugin.Google/Montr.Idx.Plugin.Google.csproj
+++ b/src/Montr.Idx.Plugin.Google/Montr.Idx.Plugin.Google.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
