--- a/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
+++ b/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="linq2db" Version="3.1.6" />
     <PackageReference Include="MailKit" Version="2.9.0" />
     <PackageReference Include="Markdig" Version="0.22.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.9" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="Stubble.Core" Version="1.9.3" />
   </ItemGroup>
 
