--- a/src/Montr.Worker.Hangfire/Montr.Worker.Hangfire.csproj
+++ b/src/Montr.Worker.Hangfire/Montr.Worker.Hangfire.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.17" />
     <PackageReference Include="HangFire.Core" Version="1.7.17" />
-    <PackageReference Include="Hangfire.PostgreSql" Version="1.7.1" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.8.0" />
   </ItemGroup>
 
   <ItemGroup>
