updated sentry, configured sentry log level

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -20,7 +20,8 @@
 		"LogLevel": {
 			"Default": "Debug",
 			"System": "Warning",
-			"Microsoft": "Warning"
+			"Microsoft": "Warning",
+			"Sentry": "Warning"
 		}
 	},
 	"AllowedHosts": "*"
