--- a/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
+++ b/src/Montr.Messages.Impl/Montr.Messages.Impl.csproj
@@ -15,11 +15,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
+    <ProjectReference Include="..\Montr.MasterData.Impl\Montr.MasterData.Impl.csproj" />
+    <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
     <ProjectReference Include="..\Montr.Messages\Montr.Messages.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands" />
   </ItemGroup>
 
 </Project>
