docs: added initial document type classifier repository

--- a/src/Montr.Docs.Impl/Montr.Docs.Impl.csproj
+++ b/src/Montr.Docs.Impl/Montr.Docs.Impl.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\Montr.Automate\Montr.Automate.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.Docs\Montr.Docs.csproj" />
+    <ProjectReference Include="..\Montr.MasterData.Impl\Montr.MasterData.Impl.csproj" />
   </ItemGroup>
 
   <ItemGroup>
