master data: converted IMessageTemplateRegistrator to IClassifierRegistrator

--- a/src/Montr.Tendr/Montr.Tendr.csproj
+++ b/src/Montr.Tendr/Montr.Tendr.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services" />
+  </ItemGroup>
+
 </Project>
