--- a/src/Montr.Tendr/Montr.Tendr.csproj
+++ b/src/Montr.Tendr/Montr.Tendr.csproj
@@ -12,10 +12,7 @@
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
     <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services" />
+    <ProjectReference Include="..\Montr.Messages\Montr.Messages.csproj" />
   </ItemGroup>
 
 </Project>
