--- a/src/Host/Host.csproj
+++ b/src/Host/Host.csproj
@@ -40,6 +40,7 @@
     <ProjectReference Include="..\Montr.Idx.Plugin.MicrosoftAccount\Montr.Idx.Plugin.MicrosoftAccount.csproj" />
     <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
     <ProjectReference Include="..\Montr.Kompany.Impl\Montr.Kompany.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Kompany.Registration\Montr.Kompany.Registration.csproj" />
     <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
     <ProjectReference Include="..\Montr.Core.Impl\Montr.Core.Impl.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
