kompany: initial document-based company registration

--- a/src/Montr.Kompany.Registration.Impl/Montr.Kompany.Registration.Impl.csproj
+++ b/src/Montr.Kompany.Registration.Impl/Montr.Kompany.Registration.Impl.csproj
@@ -6,12 +6,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
-      <ProjectReference Include="..\Montr.Docs\Montr.Docs.csproj" />
-      <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Models" />
+      <ProjectReference Include="..\Montr.Kompany.Registration\Montr.Kompany.Registration.csproj" />
     </ItemGroup>
 
 </Project>
