changed default ports in app url (MacOs Monterey has services listening by default on ports 5000 and 7000)

--- a/src/Host/Properties/launchSettings.json
+++ b/src/Host/Properties/launchSettings.json
@@ -5,7 +5,7 @@
 			"commandName": "Project",
 			"launchBrowser": false,
 			"launchUrl": "",
-			"applicationUrl": "http://+:5000;https://+:5001",
+			"applicationUrl": "https://+:5001;http://+:5002;",
 			"environmentVariables": {
 				"ASPNETCORE_ENVIRONMENT": "Development"
 			}
