--- a/src/Montr.Automate.Tests/Montr.Automate.Tests.csproj
+++ b/src/Montr.Automate.Tests/Montr.Automate.Tests.csproj
@@ -11,10 +11,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-		<PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
-		<PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
 		<PackageReference Include="Npgsql" Version="6.0.2" />
 		<PackageReference Include="Moq" Version="4.16.1" />
+		<PackageReference Include="NUnit" Version="3.13.2" />
 	</ItemGroup>
 
 </Project>
