--- a/src/Montr.MasterData.Plugin.GovRu.Tests/Montr.MasterData.Plugin.GovRu.Tests.csproj
+++ b/src/Montr.MasterData.Plugin.GovRu.Tests/Montr.MasterData.Plugin.GovRu.Tests.csproj
@@ -12,9 +12,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-		<PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
-		<PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
 		<PackageReference Include="Npgsql" Version="6.0.2" />
+		<PackageReference Include="NUnit" Version="3.13.2" />
 	</ItemGroup>
 
 	<ItemGroup>
