--- a/src/Montr.Automate.Tests/Montr.Automate.Tests.csproj
+++ b/src/Montr.Automate.Tests/Montr.Automate.Tests.csproj
@@ -7,6 +7,8 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Montr.Automate.Impl\Montr.Automate.Impl.csproj" />
 		<ProjectReference Include="..\Montr.Automate\Montr.Automate.csproj" />
+		<ProjectReference Include="..\Montr.MasterData.Tests\Montr.MasterData.Tests.csproj" />
+		<ProjectReference Include="..\Montr.Metadata.Impl\Montr.Metadata.Impl.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -14,6 +16,12 @@
 		<PackageReference Include="Npgsql" Version="6.0.2" />
 		<PackageReference Include="Moq" Version="4.16.1" />
 		<PackageReference Include="NUnit" Version="3.13.2" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="CommandHandlers\DeleteAutomationHandlerTests.cs" />
+	  <Compile Remove="CommandHandlers\InsertAutomationHandlerTests.cs" />
+	  <Compile Remove="CommandHandlers\UpdateAutomationHandlerTests.cs" />
 	</ItemGroup>
 
 </Project>
