--- a/src/Montr.Automate/Montr.Automate.csproj
+++ b/src/Montr.Automate/Montr.Automate.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+      <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
       <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
     </ItemGroup>
 
