core - configured bootstrap logger, moved logger configuration to appsettings.json

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,28 +1,49 @@
 ﻿{
-	"Montr.Core.AppOptions": {
-		// "AppUrl": "https://app.montr.io:5001",
-		// "CookieDomain": "app.montr.io"
-		"ClientUrls": [
-		  "https://127.0.0.1:5001",
-		  "http://127.0.0.1:5002",
-		  "https://app.montr.io:5001",
-		  "http://app.montr.io:5002",
-		  "http://localhost:5002",
-		  "https://localhost:5001"
-		]
+  "Montr.Core.AppOptions": {
+	// "AppUrl": "https://app.montr.io:5001",
+	// "CookieDomain": "app.montr.io"
+	"ClientUrls": [
+	  "https://127.0.0.1:5001",
+	  "http://127.0.0.1:5002",
+	  "https://app.montr.io:5001",
+	  "http://app.montr.io:5002",
+	  "http://localhost:5002",
+	  "https://localhost:5001"
+	]
+  },
+  "Montr.Core.MigrationOptions": {
+	// "ConnectionName": "Migration",
+	"Force": "false",
+	"MigrationPath": "../../database/migrations"
+  },
+  "Serilog": {
+	"Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+	"Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+	"MinimumLevel": {
+	  "Default": "Debug",
+	  "Override": {
+		"Microsoft": "Information",
+		"System": "Information",
+		"Hangfire": "Information",
+		"OpenIddict": "Information",
+		"Sentry": "Warning"
+	  }
 	},
-	"Montr.Core.MigrationOptions": {
-		// "ConnectionName": "Migration",
-		"Force": "false",
-		"MigrationPath": "../../database/migrations"
-	},
-	"Logging": {
-		"LogLevel": {
-			"Default": "Debug",
-			"System": "Warning",
-			"Microsoft": "Warning",
-			"Sentry": "Warning"
+	"WriteTo": [
+	  {
+		"Name": "Console",
+		"Args": {
+		  "outputTemplate": "{Timestamp:o} [{Level:u4}] ({MachineName}/{ThreadId}) {SourceContext} - {Message:lj}{NewLine}{Exception}"
 		}
-	},
-	"AllowedHosts": "*"
+	  },
+	  {
+		"Name": "File",
+		"Args": {
+		  "outputTemplate": "{Timestamp:o} [{Level:u4}] ({MachineName}/{ThreadId}) {SourceContext} - {Message:lj}{NewLine}{Exception}",
+		  "path": "../../../.logs/montr-.log",
+		  "rollingInterval": "Day"
+		}
+	}]
+  },
+  "AllowedHosts": "*"
 }
