ui - fixed errors after upgrade to react 18.x

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -23,6 +23,7 @@
 	  "Default": "Debug",
 	  "Override": {
 		"Microsoft": "Information",
+		"Microsoft.AspNetCore.StaticFiles": "Warning",
 		"System": "Information",
 		"Hangfire": "Information",
 		"OpenIddict": "Information",
