ui: misc automation changes (fixing react warnings)

--- a/src/Montr.Idx.Impl/Montr.Idx.Impl.csproj
+++ b/src/Montr.Idx.Impl/Montr.Idx.Impl.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Montr.Messages\Montr.Messages.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="EventHandlers" />
+  </ItemGroup>
+
 </Project>
