settings: added initial project

--- a/src/Montr.Docs/Montr.Docs.csproj
+++ b/src/Montr.Docs/Montr.Docs.csproj
@@ -13,6 +13,7 @@
 		<ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
 		<ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
 		<ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
+		<ProjectReference Include="..\Montr.Settings\Montr.Settings.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
