kompany: merged impl project

--- a/src/Montr.Kompany/Montr.Kompany.csproj
+++ b/src/Montr.Kompany/Montr.Kompany.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Montr.Idx\Montr.Idx.csproj" />
     <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
+    <ProjectReference Include="..\Montr.Settings\Montr.Settings.csproj" />
+    <ProjectReference Include="..\Montr.Worker\Montr.Worker.csproj" />
   </ItemGroup>
 
 </Project>
