settings: initial display of settings pane (not completed)

--- a/src/Montr.Settings/Montr.Settings.csproj
+++ b/src/Montr.Settings/Montr.Settings.csproj
@@ -15,6 +15,12 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+	  <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
+	  <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Services\CommandHandlers" />
 	</ItemGroup>
 
 </Project>
