--- a/src/Montr.Messages/Montr.Messages.csproj
+++ b/src/Montr.Messages/Montr.Messages.csproj
@@ -15,6 +15,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
 		<ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
+		<ProjectReference Include="..\Montr.Settings\Montr.Settings.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
