settings: initial update

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -22,7 +22,7 @@
 	"MinimumLevel": {
 	  "Default": "Debug",
 	  "Override": {
-		"Microsoft": "Warning",
+		"Microsoft": "Information",
 		"Microsoft.AspNetCore.StaticFiles": "Warning",
 		"System": "Information",
 		"Hangfire": "Information",
