settings: settings designer improvements

--- a/src/Montr.Settings/Montr.Settings.csproj
+++ b/src/Montr.Settings/Montr.Settings.csproj
@@ -19,4 +19,8 @@
 	  <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Models" />
+	</ItemGroup>
+
 </Project>
