--- a/src/Montr.Idx.Auth.Facebook/Montr.Idx.Auth.Facebook.csproj
+++ b/src/Montr.Idx.Auth.Facebook/Montr.Idx.Auth.Facebook.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>Montr.Idx.Auth.Facebook</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
