moving from less to css-in-js (not completed)

--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -45,7 +45,10 @@
 			"@montr-tendr/*": [
 				"modules/montr-tendr/*"
 			]
-		}
+		},
+		"types": [
+			"@emotion/react/types/css-prop"
+		]
 	},
 	/* "files": [
 	], */
