--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -15,6 +15,8 @@
 	"private": true,
 	"dependencies": {
 		"@ant-design/pro-components": "^2.3.34",
+		"@emotion/babel-preset-css-prop": "^11.10.0",
+		"@emotion/react": "^11.10.5",
 		"ansi-regex": ">=5.0.1",
 		"antd": "^5.0.1",
 		"axios": "^1.1.3",
