--- a/src/Montr.Tasks.Tests/Montr.Tasks.Tests.csproj
+++ b/src/Montr.Tasks.Tests/Montr.Tasks.Tests.csproj
@@ -10,7 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" />
     </ItemGroup>
 
 </Project>
