--- a/src/Montr.Idx.Auth.Facebook/Montr.Idx.Auth.Facebook.csproj
+++ b/src/Montr.Idx.Auth.Facebook/Montr.Idx.Auth.Facebook.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" />
   </ItemGroup>
 
   <ItemGroup>
