--- a/src/Montr.Settings/Montr.Settings.csproj
+++ b/src/Montr.Settings/Montr.Settings.csproj
@@ -9,8 +9,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="linq2db" Version="3.7.0" />
-	  <PackageReference Include="MediatR" Version="11.1.0" />
+	  <PackageReference Include="linq2db" />
+	  <PackageReference Include="MediatR" />
 	</ItemGroup>
 
 	<ItemGroup>
