--- a/src/Montr.Worker.Hangfire.Tests/Montr.Worker.Hangfire.Tests.csproj
+++ b/src/Montr.Worker.Hangfire.Tests/Montr.Worker.Hangfire.Tests.csproj
@@ -2,14 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
-        <Nullable>enable</Nullable>
-
-        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="NUnit" />
     </ItemGroup>
 
     <ItemGroup>
